<resources>
    <string name="app_name">Co-op Achievement</string>
    <string name="game_score">Game Score:</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="delete_config">Delete Config</string>
    <string name="save">Save</string>
    <string name="view_achievement_levels">View Achievement Levels</string>
    <string name="empty_game_state">Tap + to add a new game</string>
    <string name="empty_game_state_type">Tap + to add a new game type</string>
    <string name="open_edit_game_instruction">Single tap on a game type to open it\nHold tap a game type to edit it</string>
    <string name="invalid_num_of_player">Invalid player count…</string>
    <string name="waiting_for_input">Awaiting input…</string>
    <string name="game_name">Game Name:</string>
    <string name="good_score">Good Score:</string>
    <string name="close">CLOSE</string>
    <string name="input_player_count_below">Input player count and select difficulty below.</string>
    <string name="score">Score:</string>
    <string name="players">Players:</string>
    <!--\u0020 is the unicode character for a space. Android doesn't otherwise recognize it -->
    <string name="achievement">Achievement Level:\u0020</string>
    <string name="bad_score">Bad Score:</string>
    <string name="game_types">Game Types</string>
    <string name="edit_game_type">Edit Game Type</string>
    <string name="new_game_type">New Game Type</string>
    <string name="invalid_config">Game configuration is invalid!</string>
    <string name="cant_delete">Can\'t delete this Game Configuration</string>
    <string name="add_new_game">Add new game</string>
    <string name="edit_existing_game">Edit game</string>
    <string name="save_changes_to_existing_game">Changes have been saved!</string>
    <string name="blank">""</string>
    <string name="game_achievement_level_placeholder">Awaiting input…</string>
    <string name="game_achievement_level_calculating">Calculating scores…</string>
    <string name="player_i_score">Player %1$d score: </string>
    <string name="achievement_level">Achievement Level: </string>
    <string name="player_number_error">Number of Players needs to be above 0</string>
    <string name="game_saved_toast"> game saved!</string>
    <string name="add_game_score">Score</string>
    <string name="add_game_players">Players</string>
    <string name="invalid_game">Game is invalid!</string>
    <string name="configuration_saved">configuration saved.</string>
    <string name="deleting">\"Deleting \"</string>
    <string name="options">Options</string>/>
    <string name="display_game_play_date">Date played: %1$s</string>

    <string-array name="theme_names">
        <item>Animals</item>
        <item>Powerful Fantasy Characters</item>
        <item>Spongebob</item>
    </string-array>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="Continue">Continue</string>
    <string name="choose_your_difficulty">Choose your difficulty</string>
    <string name="choose_number_of_players">Choose number of players</string>
    <string name="achievement_theme">Achievement Theme</string>
    <string name="difficulty_is_set_to">\"Difficulty is set to \"</string>
    <string name="difficulty_selection">Difficulty Selection</string>
    <string name="total_score">Total Score:</string>
    <string name="calculate_score">Calculate Score</string>/>
    <string name="difficulty">Difficulty:</string>
    <string name="create_new_game">Create New Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="require_user_to_fill_all_field">All fields must be filled in!</string>
    <string name="game_created">Game created.</string>
    <string name="game_changes_saved">Game changes saved.</string>
    <string name="waiting_player_score_input">Awaiting player score inputs…</string>
    <string name="waiting_user_new_input">User has deleted player amount, awaiting new input.</string>
    <string name="display_score_only">Score: %1$d</string>
    <string name="display_score_and_achievement">Score: %1$d - %2$s</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_text">Statistics</string>
    <string name="image_permission_required">Couldn\'t save image! Did you grant the appropriate permissions?</string>
    <string name="permission_required">Couldn\'t save image! Permission required.</string>
    <string name="about">About</string>
    <string name="background_image_https_www_pexels_com_photo_close_up_photo_of_monopoly_board_game_776654">background image: https://www.pexels.com/photo/close-up-photo-of-monopoly-board-game-776654/</string>
    <string name="icon_picture_https_www_pngegg_com_en_png_zkzwq">icon picture: https://www.pngegg.com/en/png-zkzwq</string>
    <string name="empty_box_https_www_pexels_com_photo_cardboard_box_on_table_in_room_with_plants_4464817">Empty box: https://www.pexels.com/photo/cardboard-box-on-table-in-room-with-plants-4464817/</string>
    <string name="angus">Angus</string>
    <string name="jonathan">Jonathan</string>
    <string name="alex">Alex</string>
    <string name="hobbes">Hobbes</string>
    <string name="team_manganese">Team: Manganese</string>
    <string name="win_sound_by_alex">Win Sound: By Alex</string>
    <string name="resources_used">Resources Used</string>
    <string name="game_info">Game Info</string>
    <string name="ac_players_placeholder">Players:</string>
    <string name="ac_score_placeholder">Score:</string>
    <string name="player_pos">"\player "\ %1$d</string>
    <string name="ac_animation_description">plays win animation</string>
    <string name="ac_next_level_gap_placeholder">Points To Next Level:</string>
    <string name="ac_next_level_name_placeholder">Next Level Name</string>
    <string name="ac_play_animation_placeholder">Play Animation</string>
    <string name="ac_selected_theme_placeholder">Selected Theme:</string>
    <string name="ac_players_display">Number of players: %1$d</string>
    <string name="ac_score_display">Score achieved: %1$s - %2$d</string>
    <string name="ac_next_level_gap_display">%1$d points away from the next level</string>
    <string name="ac_next_level_title_display">Next level: %1$s - %2$d</string>
    <string name="take_photo">Take Photo</string>
    <string name="view_photo">View Photo</string>
    <string name="tap_to_edit_image">Tap the image to retake it</string>
    <string name="invalidConfig">Invalid configuration.</string>
    <string name="selected_easy">Selected \"Easy\" difficulty multiplier.</string>
    <string name="selected_normal">Selected \"Normal\" difficulty multiplier.</string>
    <string name="selected_hard">Selected \"Hard\" difficulty multiplier.</string>
    <string name="ask_for_taking_photo">Do you want to take a photo and save for the game record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_photo">Add Photo</string>
    <string name="player_x">Player X</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="user_denied_permissions">You have denied permissions. Please enable in options to take a picture.</string>
    />
</resources>