<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GamePlayActivity">

    <ImageView
        android:id="@+id/iv_gamePlayBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/boardgame"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-290dp" />

    <ImageView
        android:id="@+id/ivGameSaveAnimation"
        android:layout_width="113dp"
        android:layout_height="108dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlayerCount"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/tvChoosePlayerAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/choose_number_of_players"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDifficultyNormal" />

    <TextView
        android:id="@+id/tvChooseDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose_your_difficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPlayerCount"
        android:layout_width="105dp"
        android:layout_height="46dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tvChoosePlayerAmount"
        app:layout_constraintStart_toStartOf="@+id/tvChoosePlayerAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvChoosePlayerAmount"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnDifficultyEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/easy"
        app:layout_constraintEnd_toStartOf="@+id/btnDifficultyNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDifficultyNormal" />

    <Button
        android:id="@+id/btnDifficultyHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDifficultyNormal"
        app:layout_constraintTop_toTopOf="@+id/btnDifficultyNormal" />

    <Button
        android:id="@+id/btnDifficultyNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/normal"
        app:layout_constraintEnd_toEndOf="@+id/tvChooseDifficulty"
        app:layout_constraintStart_toStartOf="@+id/tvChooseDifficulty"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseDifficulty" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayerScoreInputs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvScoreWithAchievementLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivGameSaveAnimation" />

    <TextView
        android:id="@+id/tvScoreWithAchievementLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/tv_askUserWillingToTakePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_askUserWillingToTakePhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="#48FFFFFF"
        android:text="Do you want to take a photo and save for the game record?"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnYesToTakePhoto"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnYesToTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNoToTakePhoto"
        app:layout_constraintStart_toStartOf="@+id/tv_askUserWillingToTakePhoto" />

    <Button
        android:id="@+id/btnNoToTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="8dp"
        android:text="No"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>